# zxing-cpp

./: .gitignore  jitpack.yml
core/src/: Barcode.cpp  Barcode.h  BarcodeData.h  BitMatrix.cpp  DecoderResult.h
core/src/qrcode/: QRDecoder.cpp  QRWriter.cpp
example/: ZXingWriter.cpp
wrappers/aar/: .gitignore  Makefile  README.md  build.gradle  gradle.properties
wrappers/aar/app/: build.gradle
wrappers/aar/app/src/androidTest/java/com/example/zxingcppdemo/: ZxingCppTest.kt
wrappers/aar/app/src/main/: AndroidManifest.xml
wrappers/aar/app/src/main/java/com/example/zxingcppdemo/: MainActivity.kt  OverlayView.kt
wrappers/aar/app/src/main/res/layout/: activity_main.xml
wrappers/aar/app/src/main/res/values/: colors.xml  strings.xml
wrappers/aar/gradle/wrapper/: gradle-wrapper.properties
wrappers/aar/zxingcpp/: build.gradle
wrappers/aar/zxingcpp/src/main/cpp/: CMakeLists.txt  JNIUtils.cpp  ZxingCpp.cpp
wrappers/aar/zxingcpp/src/main/java/de/markusfisch/android/zxingcpp/: ZxingCpp.kt
